--- a/css/styles.css
+++ b/css/styles.css
@@ -384,6 +384,49 @@ figure {
     letter-spacing: 1px;
     font-weight: 600;
 }
+.reviews-form {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+.reviews-form label {
+    flex: 1;
+    width: 100%;
+    margin-top: 5px;
+}
+
+.reviews-form input,
+.reviews-form textarea {
+    display: block;
+    width: 100%;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid orange;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.reviews-form textarea {
+    height: auto
+}
+
+.reviews-form button{
+    display: block;
+    width: 100%;
+    cursor: pointer;
+    text-align: center;
+    color: #fff;
+    background-color: orange;
+    border-color: #fff;
+    padding: .5rem 1rem;
+    font-size: 1.25rem;
+    line-height: 1.5;
+    border-radius: .3rem;
+    margin-top: 1rem
+}
 @media (max-width: 800px) {
     .inside #map-container {
         width: 100%;
