--- a/css/styles.css
+++ b/css/styles.css
@@ -486,7 +486,9 @@ figure {
 }
 .like {
     width: 100%;
+    text-align: center;
 }
 .like .favourite {
     font-size: 1.5em;
+    margin: 0.5em;
 }
